<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="simple">Simple</string>
    <string name="scientific">Scientific</string>

    <string name="mod"> % </string>
    <string name="n7">7</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="b_open">(</string>
    <string name="b_close">)</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="plus_minus">+/-</string>
    <string name="del">DEL</string>
    <string name="dot">.</string>
    <string name="copy">Copy eqn</string>
    <string name="mr">mr</string>
    <string name="m_plus">m+</string>
    <string name="m_minus">m-</string>
    <string name="mc">mc</string>
</resources>