<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#020000"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:weightSum="2"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rv1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.05"
        tools:context=".MainActivity"
        android:background="#020000"
        android:layout_rowWeight="30">

        <TextView
            android:id="@+id/mem"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/n0"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:textColor="#FF9E00"
            android:textSize="30sp"
            android:gravity="bottom"
            android:scrollbars="horizontal"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="5dp"
            android:layout_alignTop="@+id/mem"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/card"
                android:layout_alignBottom="@+id/card"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-2dp"
                android:gravity="bottom"
                android:paddingStart="20dp"
                android:paddingTop="25dp"
                android:paddingEnd="20dp"
                android:scrollbars="vertical"
                android:text="@string/n0"
                android:textColor="#F50000"
                android:textSize="90sp" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/equation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignBottom="@+id/card"
            android:layout_alignStart="@+id/card"
            android:layout_marginBottom="-77dp"
            android:text="@string/n0"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:textColor="#0f0"
            android:textSize="30sp"
            android:gravity="end"
            android:scrollbars="horizontal"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        tools:context=".MainActivity"
        android:background="#222222"
        android:layout_rowWeight="30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="6"
            android:background="#222222"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="5"
                android:orientation="vertical">


                <Button
                    android:id="@+id/mr"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:text="@string/mr"
                    android:textColor="#FF9E00"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/mc"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:text="@string/mc"
                    android:textColor="#FF9E00"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/m_plus"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:text="@string/m_plus"
                    android:textColor="#FF9E00"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/m_minus"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:text="@string/m_minus"
                    android:textColor="#FF9D00"
                    android:textSize="25sp"/>



                <Button
                    android:id="@+id/copy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/copy"
                    android:text="@string/copy"
                    android:textColor="#69FF00"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:weightSum="5"
                android:orientation="vertical">


                <Button
                    android:id="@+id/n7"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/n7"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"/>

                <Button
                    android:id="@+id/n4"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/n4"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"/>

                <Button
                    android:id="@+id/n1"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:text="@string/n1"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"/>

                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:text="@string/clear"
                    android:textColor="#FFA000"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">



                <Button
                    android:id="@+id/n8"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n8"/>

                <Button
                    android:id="@+id/n5"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n5"/>

                <Button
                    android:id="@+id/n2"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n2"/>

                <Button
                    android:id="@+id/n0"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">


                <Button
                    android:id="@+id/n9"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n9"/>

                <Button
                    android:id="@+id/n6"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n6"/>

                <Button
                    android:id="@+id/n3"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/n3"/>

                <Button
                    android:id="@+id/dot"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_number"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    android:text="@string/dot"/>

                <Button
                    android:id="@+id/del"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:textColor="#FF9D00"
                    android:textSize="25sp"
                    android:text="@string/del"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5">

                <Button
                    android:id="@+id/div"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_funct"
                    android:textColor="#0277BD"
                    android:text="@string/div"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/mul"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_funct"
                    android:text="@string/mul"
                    android:textColor="#0277BD"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/sub"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_funct"
                    android:textColor="#0277BD"
                    android:textSize="40sp"
                    android:text="@string/sub"/>

                <Button
                    android:id="@+id/add"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_funct"
                    android:textColor="#0277BD"
                    android:textSize="40sp"
                    android:text="@string/add"/>

                <Button
                    android:id="@+id/equal"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_op"
                    android:textColor="#FF9D00"
                    android:textSize="40sp"
                    android:text="@string/equal"/>


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>